force-app/main/default/objects/CampaignMember/fields/Invitation_Method__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Method__c</fullName>
    <description>Capture how the constituent was invited initially.</description>
    <label>Invitation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>In-person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>