force-app/main/default/objects/CampaignMember/fields/Invited_By__c.field-meta.xml
<CustomField>
    <fullName>Invited_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Individual source of the invite to the Campaign Member</description>
    <label>Invited By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>