force-app/main/default/objects/CampaignMember/fields/Relationship_Manager__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Manager__c</fullName>
    <formula>Contact.Primary_Handler__r.FirstName  + &quot; &quot;  +  Contact.Primary_Handler__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relationship Manager</label>
    <type>Text</type>
</CustomField>